@@ -76,7 +76,7 @@ static int ser_open(CableHandle *h)
     h->priv = GINT_TO_POINTER(fd);
     TRYC(ser_reset(h));
 #ifdef OPEN_DELAYED
-	usleep(2000);	// needs this because serial lines can be low at startup
+    usleep(2000000);	// needs this because serial lines can be low at startup
 #endif
 
     return 0;
